# NPTEL-Autoanswer

./: DEBUGGING.md  NPTEL-Sheet.xlsx  README.md  app.py  main.py  pyproject.toml
templates/: index.html
