[project]
name = "nptelbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "generativeai>=0.0.1",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "groq>=0.30.0",
    "flask>=3.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]
